--- a/GraphicalSetGame/Base.lproj/Main.storyboard
+++ b/GraphicalSetGame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -11,7 +11,7 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SetGameViewController" customModule="GraphicalSetGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="redraw" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -22,10 +22,11 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1dk-KC-rE7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wQd-Bf-AAo" secondAttribute="trailing" constant="20" id="UYc-5C-PvL"/>
-                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fxr-O1-bmc"/>
-                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="hhs-gG-cpg"/>
+                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="074-mu-zpU"/>
+                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Gkb-43-akp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wQd-Bf-AAo" secondAttribute="bottom" id="OQS-lc-DLv"/>
+                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Y5y-vF-Q6j"/>
+                            <constraint firstItem="wQd-Bf-AAo" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="td9-ei-Ydf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -35,7 +36,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="154" y="90"/>
+            <point key="canvasLocation" x="236" y="-172"/>
         </scene>
     </scenes>
 </document>
